MyDevOrgData/src/objects/OrderHistory__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>OrderHistorys</relationshipLabel>
        <relationshipName>OrderHistorys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderLink__c</fullName>
        <label>OrderLink</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>OrderNumber</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order_Link_In_HTML__c</fullName>
        <label>Order Link In HTML</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>OrderHistory</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>OrderHistory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrderHistorys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>